<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/individualActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:layout_editor_absoluteY="81dp">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:layout_editor_absoluteX="8dp"
      tools:layout_editor_absoluteY="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <ImageView
          android:id="@+id/imageView5"
          android:layout_width="173dp"
          android:layout_height="154dp"
          android:layout_marginEnd="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/logo" />

      <TextView
          android:id="@+id/tv1"
          android:layout_width="215dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:gravity="center"
          android:padding="8dp"
          android:text="Muhim Duolar"
          android:textColor="@color/myBlack"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView5" />

      <TextView
          android:id="@+id/tv3"
          android:layout_width="467dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:gravity="center"
          android:padding="8dp"
          android:text="Duoning hikmati va fazilatlari"
          android:textColor="@color/myBlack"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv1" />



      <TextView
          android:id="@+id/textView7"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/dalil6"
          android:textColor="@color/green"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv2" />

      <TextView
          android:id="@+id/textView6"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/dalil5"
          android:textColor="@color/green"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv" />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:text="@string/dalil4"
          android:textColor="@color/green"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv3" />


      <TextView
          android:id="@+id/tv4"
          android:layout_width="328dp"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginEnd="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:gravity="center"
          android:padding="8dp"
          android:text="Mustajob duolar"
          android:textColor="@color/myBlack"
          android:textSize="24sp"
          app:layout_constraintBottom_toTopOf="@+id/textView3"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView7" />

      <TextView
          android:id="@+id/tv2"
          android:layout_width="328dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:gravity="center"
          android:padding="8dp"
          android:text="Duo qilish odoblari"
          android:textColor="@color/myBlack"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView6" />

      <TextView
          android:id="@+id/tv"
          android:layout_width="328dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:gravity="center"
          android:padding="8dp"
          android:text="Duo va ijobat"
          android:textColor="@color/myBlack"
          android:textSize="24sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </android.support.constraint.ConstraintLayout>
  </ScrollView>

</android.support.constraint.ConstraintLayout>